--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ header h1 {
     font-family: 'Libre Barcode 128 Text', 'Libre Barcode 39 Text', cursive;
     font-size: 128px;
     font-weight: 300;
-    padding-top: 30px;
+    padding-top: 10px;
 }
 
 #life {
@@ -43,11 +43,14 @@ header h1 {
 .letters-list {
     display: grid;
     column-gap: 50px;
-    grid-template-columns: repeat(5, 1fr);
+    /* grid-template-columns: repeat(8, 1fr); */
 }
 
 .letters-list [id*="letter-"] {
     border-bottom: 4px solid black;
+    width: 80px;
+    display: flex;
+    justify-content: center;
 }
 
 .letters-list [id*="letter-"] input[type=text] {
@@ -112,8 +115,6 @@ header h1 {
     font-family: 'Libre Barcode 128 Text', 'Libre Barcode 39 Text', cursive;
     font-size: 148px;
     font-weight: 300;
-    /* color: #AF0000; */
-    /* color: #008000; */
     flex: 100%;
 }
 
